--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="content">
       <section class="top_section">
         <div class="image_container">
-          <img src="/image/apj-abdul-kalam.jpg" alt="">
+          <img src="image/apj-abdul-kalam.jpg" alt="">
         </div>
         <div>
           <h1>A.P.J Abdul Kalam</h1>
